--- a/app/views/impact_cards/new.html.erb
+++ b/app/views/impact_cards/new.html.erb
@@ -67,7 +67,7 @@
             <div class="col-span-full">
               <%= initiatives_form.label :description %>
               <div class="mt-2">
-                <%= initiatives_form.text_area :description, rows: 3, placeholder: 'Initiative description' %>
+                <%= initiatives_form.rich_textarea :description, rows: 3, placeholder: 'Initiative description' %>
               </div>
             </div>
           <% end %>
