--- a/app/views/impact_cards/initiatives/show.html.erb
+++ b/app/views/impact_cards/initiatives/show.html.erb
@@ -16,7 +16,7 @@
         <div class="flex flex-wrap items-center gap-x-4 gap-y-2">
           <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white"><%= @initiative.name %></h1>
         </div>
-        <div class="mt-2 text-sm/6 text-zinc-500"><%= @initiative.description %></div>
+        <div class="mt-2 text-sm/6 text-zinc-500"><%= rich_text(@initiative.description) %></div>
       </div>
     </div>
   </div>
