--- a/app/views/initiatives/_form.html.erb
+++ b/app/views/initiatives/_form.html.erb
@@ -30,7 +30,7 @@
           <div class="col-span-full">
             <%= form.label :description %>
             <div class="mt-2">
-              <%= form.text_area :description, rows: 3, placeholder: 'Initiative description' %>
+              <%= form.rich_textarea :description, rows: 3, placeholder: 'Initiative description' %>
             </div>
             <p class="text-sm/6 text-gray-600 dark:text-gray-400">A brief description of the initiative (optional).</p>
           </div>
