--- a/app/views/organisations/_form.html.erb
+++ b/app/views/organisations/_form.html.erb
@@ -15,7 +15,7 @@
           <div class="col-span-full">
             <%= form.label :description %>
             <div class="mt-2">
-              <%= form.text_area :description, rows: 3, placeholder: '' %>
+              <%= form.rich_textarea :description, rows: 3, placeholder: '' %>
             </div>
             <p class="text-sm/6 text-gray-600 dark:text-gray-400">A brief description of the stakeholder (optional).</p>
           </div>
