--- a/app/views/targets/_form.html.erb
+++ b/app/views/targets/_form.html.erb
@@ -1,5 +1,4 @@
-<%= turbo_frame_tag dom_id(@goal) do %>
-  <%= form_with(model: @goal, local: true, url: goal_path(@goal), class: 'mb-1 mt-1') do |form| %>
+  <%= form_with(model: @target, local: true, url:, class: 'mb-1 mt-1') do |form| %>
     <div class="grid grid-cols-4 gap-4 w-full">
       <div class="sm:col-span-4">
         <div class="mt-2">
@@ -33,9 +32,9 @@
       <div class="col-span-full">
         <%= form.label :description %>
         <div class="mt-2">
-          <%= form.rich_textarea :description, rows: 3, placeholder: 'Goal description' %>
+          <%= form.rich_textarea :description, rows: 3, placeholder: 'Target description' %>
         </div>
-        <p class="text-sm/6 text-gray-600 dark:text-gray-400">A brief description of the goal (optional).</p>
+        <p class="text-sm/6 text-gray-600 dark:text-gray-400">A brief description of the target (optional).</p>
       </div>
 
       
@@ -45,11 +44,10 @@
       <div class="col-span-4 flex justify-end space-x-4">
         <%= link_to(
           'Cancel',
-          goal_path(@goal),
+          cancel_path,
           class: 'text-sm font-semibold text-gray-900 dark:text-white mt-2 mr-3'
         ) %>
         <%= form.submit 'Save' %>
       </div>
     </div>
   <% end %>
-<% end %>
