--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -1,8 +1,8 @@
-  <%= form_with(model: @target, local: true, url:, class: 'mb-1 mt-1') do |form| %>
+  <%= form_with(model: goal, local: true, url:, class: 'mb-1 mt-1') do |form| %>
     <div class="grid grid-cols-4 gap-4 w-full">
       <div class="sm:col-span-4">
         <div class="mt-2">
-          <%= form.text_field(:name, placeholder: 'Target name', autofocus: true, required: true) %>
+          <%= form.text_field(:name, placeholder: 'Goal name', autofocus: true, required: true) %>
         </div>
       </div>
 
@@ -32,10 +32,12 @@
       <div class="col-span-full">
         <%= form.label :description %>
         <div class="mt-2">
-          <%= form.rich_textarea :description, rows: 3, placeholder: 'Target description' %>
+          <%= form.rich_textarea :description, rows: 3, placeholder: 'Goal description' %>
         </div>
-        <p class="text-sm/6 text-gray-600 dark:text-gray-400">A brief description of the target (optional).</p>
+        <p class="text-sm/6 text-gray-600 dark:text-gray-400">A brief description of the goal (optional).</p>
       </div>
+
+      
     </div>
 
     <div class="grid grid-cols-4 gap-4 w-full pt-2 pb-3">
