--- a/app/views/goals/index.turbo_stream.erb
+++ b/app/views/goals/index.turbo_stream.erb
@@ -1,9 +1,9 @@
-<%= turbo_stream.update dom_id(@target, :new_indicator) do %>
+<%= turbo_stream.update dom_id(@impact_card_data_model, :new_goal) do %>
   <div class="flex justify-end">
     <%= 
       link_to(
-        'Create Indicator', 
-        new_target_indicator_path(target_id: @target.id), 
+        'Create Goal', 
+        new_impact_card_data_model_goal_path(impact_card_data_mode_id: @impact_card_data_model.id), 
         class: 'ml-2 inline-flex items-center px-4 py-2 border border-transparent text-xs font-medium rounded-md text-white bg-emerald-600 hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500', 
         data: { turbo_stream: true }
       )
