--- a/app/views/indicators/new.turbo_stream.erb
+++ b/app/views/indicators/new.turbo_stream.erb
@@ -1,3 +1,10 @@
 <%= turbo_stream.update dom_id(@target, :new_indicator) do %>
-  <%= render 'form', indicator: @indicator, url: target_indicators_path(@target), cancel_path: indicators_path(target_id: @target.id) %>
+  <%= 
+    render(
+      'form', 
+      indicator: @indicator, 
+      url: target_indicators_path(@target), 
+      cancel_path: target_indicators_path(@target)
+    ) 
+  %>
 <% end %>
