--- a/app/views/targets/new.turbo_stream.erb
+++ b/app/views/targets/new.turbo_stream.erb
@@ -1,3 +1,10 @@
 <%= turbo_stream.update dom_id(@goal, :new_target) do %>
-  <%= render 'form', target: @target, url: goal_targets_path(@goal), cancel_path: targets_path(goal_id: @goal.id) %>
+  <%= 
+    render(
+      'form', 
+      target: @target, 
+      url: goal_targets_path(@goal), 
+      cancel_path: goal_targets_path(@goal) 
+    )
+  %>
 <% end %>
