--- a/app/views/goals/create.turbo_stream.erb
+++ b/app/views/goals/create.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream.append dom_id(@impact_card_data_model, :goals_list) do %>
-  <div class="mb-4">
+  <div class="mb-4 w-full rounded-lg border border-zinc-200 bg-white p-4 shadow-sm dark:border-zinc-700 dark:bg-zinc-800">
     <%= turbo_frame_tag dom_id(@goal) do %>
       <%= render partial: 'link', locals: { goal: @goal } %>
     <% end %>
