--- a/app/views/impact_card_data_models/edit.html.erb
+++ b/app/views/impact_card_data_models/edit.html.erb
@@ -28,13 +28,13 @@
   <div class="mt-4 flex flex-wrap items-end justify-start gap-4">
     <%= turbo_frame_tag dom_id(@impact_card_data_model, :goals_list) do %>
       <% @impact_card_data_model.focus_area_groups.each do |focus_area_group| %>
-        <div class="mb-6">
+        <div class="mb-6 w-full rounded-lg border border-zinc-200 bg-white p-4 shadow-sm dark:border-zinc-700 dark:bg-zinc-800">
           <%= turbo_frame_tag dom_id(focus_area_group) do %>
             <%= render '/goals/link', goal: focus_area_group %>
           <% end %>
           <%= turbo_frame_tag dom_id(focus_area_group, :targets_list) do %>
             <% focus_area_group.focus_areas.order(:position).each do |focus_area| %>
-              <div class="mb-4 ml-3">
+              <div class="mb-4 ml-3 rounded-lg border border-zinc-200 bg-white p-4 shadow-sm dark:border-zinc-700 dark:bg-zinc-800">
                 <%= turbo_frame_tag dom_id(focus_area) do %>
                   <%= render '/targets/link', target: focus_area %>
                 <% end %>
@@ -64,7 +64,7 @@
           <% end %>
 
           <%= turbo_frame_tag dom_id(focus_area_group, :new_target) do %>
-            <div class="flex justify-end">
+            <div class="flex justify-start">
               <%= 
                 link_to(
                   'Create Target', 
@@ -81,7 +81,7 @@
     <% end %>
     
     <%= turbo_frame_tag dom_id(@impact_card_data_model, :new_goal) do %>
-      <div class="flex justify-end">
+      <div class="flex justify-start">
         <%= 
           link_to(
             'Create Goal', 
