--- a/app/views/goals/edit.html.erb
+++ b/app/views/goals/edit.html.erb
@@ -1,3 +1,11 @@
 <%= turbo_frame_tag dom_id(@goal) do %>
-  <%= render 'form', goal: @goal, url: goal_path(@goal), cancel_path: goal_path(@goal) %>
+  <%= 
+    render(
+      'data_model_elements/form', 
+      element: @goal, 
+      url: goal_path(@goal), 
+      cancel_path: goal_path(@goal),
+      destroy_path: goal_path(@goal),
+    ) 
+  %>
 <% end %>
