--- a/app/views/goals/new.turbo_stream.erb
+++ b/app/views/goals/new.turbo_stream.erb
@@ -1,10 +1,10 @@
 <%= turbo_stream.update dom_id(@data_model, :new_goal) do %>
   <%= 
     render(
-      'form', 
-      goal: @goal, 
-      url: data_model_goals_path(@data_model), 
+      'data_model_elements/form', 
+      element: @goal, 
+      url: data_model_goals_path(@data_model),
       cancel_path: data_model_goals_path(@data_model)
-    )
+    ) 
   %>
 <% end %>
