--- a/app/views/targets/new.turbo_stream.erb
+++ b/app/views/targets/new.turbo_stream.erb
@@ -1,8 +1,8 @@
 <%= turbo_stream.update dom_id(@goal, :new_target) do %>
   <%= 
     render(
-      'form', 
-      target: @target, 
+      'data_model_elements/form',
+      element: @target, 
       url: goal_targets_path(@goal), 
       cancel_path: goal_targets_path(@goal) 
     )
