--- a/app/views/goals/new.turbo_stream.erb
+++ b/app/views/goals/new.turbo_stream.erb
@@ -4,7 +4,8 @@
       'data_model_elements/form', 
       element: @goal, 
       url: data_model_goals_path(@data_model),
-      cancel_path: data_model_goals_path(@data_model)
+      cancel_path: data_model_goals_path(@data_model),
+      max_position: @max_position
     ) 
   %>
 <% end %>
