--- a/app/views/indicators/show.html.erb
+++ b/app/views/indicators/show.html.erb
@@ -1,3 +1,7 @@
 <%= turbo_frame_tag dom_id(@indicator) do %>
-  <%= render 'link', indicator: @indicator %>
+  <div class="ml-5 bg-white shadow-sm p-0.5 dark:bg-zinc-800">
+    <%= turbo_frame_tag dom_id(@indicator, :link) do %>
+      <%= render '/indicators/link', indicator: @indicator, link_class: 'animate-flash-yellow' %>
+    <% end %>
+  </div>
 <% end %>
