--- a/app/views/targets/new.turbo_stream.erb
+++ b/app/views/targets/new.turbo_stream.erb
@@ -4,7 +4,8 @@
       'data_model_elements/form',
       element: @target, 
       url: goal_targets_path(@goal), 
-      cancel_path: goal_targets_path(@goal) 
+      cancel_path: goal_targets_path(@goal),
+      max_position: @max_position
     )
   %>
 <% end %>
