--- a/app/views/goals/_link.html.erb
+++ b/app/views/goals/_link.html.erb
@@ -1,7 +1,7 @@
 <%= 
   link_to(
     edit_goal_path(goal), 
-    data: { turbo_frame: dom_id(goal) }
+    data: { turbo_frame: dom_id(goal, :link) }
   ) do %>
   <h2 class="text-2xl font-bold text-zinc-950 dark:text-white hover:bg-gray-200 dark:hover:bg-gray-800 mb-4" title="<%= goal.name %>">
     <%= render 'data_model_elements/link_text', element: goal %>  
