--- a/app/views/goals/destroy.turbo_stream.erb
+++ b/app/views/goals/destroy.turbo_stream.erb
@@ -1,1 +1,5 @@
-<%= turbo_stream.remove dom_id(@goal) %>
+<%= turbo_stream.update dom_id(@goal) do %>
+  <h2 class="text-2xl font-bold text-zinc-950 dark:text-white mb-4 animate-hide">
+    <%= @goal.name %>  
+  </h2>
+<% end %>
