--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,3 +1,3 @@
-<%= turbo_frame_tag dom_id(@goal) do %>
+<%= turbo_frame_tag dom_id(@goal, :link) do %>
   <%= render 'link', goal: @goal %>
 <% end %>
