--- a/app/views/indicators/create.turbo_stream.erb
+++ b/app/views/indicators/create.turbo_stream.erb
@@ -5,14 +5,5 @@
 <% end %>
 
 <%= turbo_stream.update dom_id(@target, :new_indicator) do %>
-  <div class="flex justify-end">
-    <%= 
-      link_to(
-        'Create Indicator', 
-        new_target_indicator_path(target_id: @target.id), 
-        class: 'ml-2 inline-flex items-center px-4 py-2 border border-transparent text-xs font-medium rounded-md text-white bg-emerald-600 hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500', 
-        data: { turbo_stream: true }
-      )
-    %>
-  </div>
+  <%= render 'indicators/link_to_new_element', parent: target %>
 <% end %>
