--- a/app/views/indicators/new.turbo_stream.erb
+++ b/app/views/indicators/new.turbo_stream.erb
@@ -4,7 +4,8 @@
       'data_model_elements/form', 
       element: @indicator, 
       url: target_indicators_path(@target), 
-      cancel_path: target_indicators_path(@target)
+      cancel_path: target_indicators_path(@target),
+      max_position: @max_position
     ) 
   %>
 <% end %>
