--- a/app/views/indicators/update.turbo_stream.erb
+++ b/app/views/indicators/update.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream.update dom_id(@indicator) do %>
-  <div class="ml-5 bg-white p-4 shadow-sm p-0.5 dark:bg-zinc-800">
+  <div class="ml-5 bg-white shadow-sm p-0.5 dark:bg-zinc-800">
     <%= turbo_frame_tag dom_id(@indicator, :link) do %>
       <%= render '/indicators/link', indicator: @indicator, link_class: 'animate-flash-yellow' %>
     <% end %>
