--- a/app/views/data_model_elements/_description.html.erb
+++ b/app/views/data_model_elements/_description.html.erb
@@ -1,5 +1,5 @@
 <%- if element.description.present? %>        
-  <div class="flex text-zinc-500 mb-4">
+  <div class="flex text-zinc-500 mb-4 dark:text-zinc-400">
     <%= rich_text(element.description) %>
   </div>
 <% end %>
