--- a/app/views/indicators/update.turbo_stream.erb
+++ b/app/views/indicators/update.turbo_stream.erb
@@ -1,7 +1,3 @@
 <%= turbo_stream.update dom_id(@indicator) do %>
-  <div class="ml-5 bg-white shadow-sm p-0.5 dark:bg-zinc-800">
-    <%= turbo_frame_tag dom_id(@indicator, :link) do %>
-      <%= render '/indicators/link', indicator: @indicator, link_class: 'animate-flash-yellow' %>
-    <% end %>
-  </div>
+  <%= render 'indicators/indicator', indicator: @indicator, link_class: 'animate-flash-yellow' %>
 <% end %>
