--- a/app/views/data_models/edit.html.erb
+++ b/app/views/data_models/edit.html.erb
@@ -35,32 +35,28 @@
 
   <div class="mt-4 flex flex-wrap items-end justify-start gap-4">
     <%= turbo_frame_tag dom_id(@data_model, :goals_list) do %>
-      <% @data_model.children.each do |goal| %>
+      <% @data_model.children.order(:position).each do |goal| %>
         <%= turbo_frame_tag dom_id(goal) do %>
           <div class="mb-6 w-full rounded-lg border border-zinc-200 bg-white p-4 shadow-sm dark:border-zinc-700 dark:bg-zinc-800">
             <%= turbo_frame_tag dom_id(goal, :link) do %>
               <%= render '/goals/link', goal: goal %>
             <% end %>
             <%= turbo_frame_tag dom_id(goal, :targets_list) do %>
-              <% goal.focus_areas.order(:position).each do |focus_area| %>
-                <%= turbo_frame_tag dom_id(focus_area) do %>
+              <% goal.children.order(:position).each do |target| %>
+                <%= turbo_frame_tag dom_id(target) do %>
                   <div class="mb-4 ml-3 rounded-lg border border-zinc-200 bg-white p-4 shadow-sm dark:border-zinc-700 dark:bg-zinc-800">
-                    <%= turbo_frame_tag dom_id(focus_area, :link) do %>
-                      <%= render '/targets/link', target: focus_area %>
+                    <%= turbo_frame_tag dom_id(target, :link) do %>
+                      <%= render '/targets/link', target: target %>
                     <% end %>
-                    <%= turbo_frame_tag dom_id(focus_area, :indicators_list) do %>
-                      <% focus_area.characteristics.each do |characteristic| %>
-                        <%= turbo_frame_tag dom_id(characteristic) do %>
-                          <div class="ml-5 bg-white shadow-sm p-0.5 dark:bg-zinc-800">
-                            <%= turbo_frame_tag dom_id(characteristic, :link) do %>
-                              <%= render '/indicators/link', indicator: characteristic %>
-                            <% end %>
-                          </div>
+                    <%= turbo_frame_tag dom_id(target, :indicators_list) do %>
+                      <% target.children.order(:position).each do |indicator| %>
+                        <%= turbo_frame_tag dom_id(indicator) do %>
+                          <%= render 'indicators/indicator', indicator: %>
                         <% end %>
                       <% end %>
                     <% end %>
-                    <%= turbo_frame_tag dom_id(focus_area, :new_indicator) do %>
-                      <%= render 'indicators/link_to_new_element', parent: focus_area %>
+                    <%= turbo_frame_tag dom_id(target, :new_indicator) do %>
+                      <%= render 'indicators/link_to_new_element', parent: target %>
                     <% end %>
                   </div>
                 <% end %>
