--- a/app/views/targets/create.turbo_stream.erb
+++ b/app/views/targets/create.turbo_stream.erb
@@ -1,22 +1,7 @@
 <%= turbo_stream.append dom_id(@goal, :targets_list) do %>
-  <div class="mb-4 ml-3">
-    <%= turbo_frame_tag dom_id(@target) do %>
-      <%= render partial: 'link', locals: { target: @target } %>
-    <% end %>
-
-    <ul class="list-disc pl-8">
-      <%= turbo_frame_tag dom_id(@target, :indicators_list) do %>
-        <% @target.characteristics.each do |characteristic| %>
-          <%= turbo_frame_tag dom_id(characteristic) do %>
-            <%= render '/indicators/link', indicator: characteristic %>
-          <% end %>
-        <% end %>
-      <% end %>
-    </ul>
-    <%= turbo_frame_tag dom_id(@target, :new_indicator) do %>
-       <%= render 'targets/link_to_new_element', parent: @target %>
-    <% end %>
-  </div>
+  <%= turbo_frame_tag dom_id(@target) do %>
+    <%= render 'targets/target', target: @target %>
+  <% end %>
 <% end %>
 
 <%= turbo_stream.update dom_id(@goal, :new_target) do %>
