--- a/app/views/data_models/edit.html.erb
+++ b/app/views/data_models/edit.html.erb
@@ -44,21 +44,7 @@
             <%= turbo_frame_tag dom_id(goal, :targets_list) do %>
               <% goal.children.order(:position).each do |target| %>
                 <%= turbo_frame_tag dom_id(target) do %>
-                  <div class="mb-4 ml-3 rounded-lg border border-zinc-200 bg-white p-4 shadow-sm dark:border-zinc-700 dark:bg-zinc-800">
-                    <%= turbo_frame_tag dom_id(target, :link) do %>
-                      <%= render '/targets/link', target: target %>
-                    <% end %>
-                    <%= turbo_frame_tag dom_id(target, :indicators_list) do %>
-                      <% target.children.order(:position).each do |indicator| %>
-                        <%= turbo_frame_tag dom_id(indicator) do %>
-                          <%= render 'indicators/indicator', indicator: %>
-                        <% end %>
-                      <% end %>
-                    <% end %>
-                    <%= turbo_frame_tag dom_id(target, :new_indicator) do %>
-                      <%= render 'indicators/link_to_new_element', parent: target %>
-                    <% end %>
-                  </div>
+                  <%= render 'targets/target', target: %>
                 <% end %>
               <% end %>
             <% end %>
