--- a/app/views/indicators/_link.html.erb
+++ b/app/views/indicators/_link.html.erb
@@ -7,10 +7,4 @@
     <%= render 'data_model_elements/link_text', element: indicator %>
   </h4>
 <% end %>
-
-
-<%- if indicator.description.present? %>        
-  <div class="flex text-zinc-500 mb-4">
-    <%= rich_text(indicator.description) %>
-  </div>
-<% end %>
+<%= render 'data_model_elements/description', element: indicator %>
