--- a/app/views/targets/destroy.turbo_stream.erb
+++ b/app/views/targets/destroy.turbo_stream.erb
@@ -1,5 +1,7 @@
 <%= turbo_stream.update dom_id(@target) do %>
-  <h2 class="text-xl font-bold text-zinc-950 dark:text-white mb-4 animate-hide">
-    <%= @target.name %>  
-  </h2>
+  <div class="mb-4 ml-3 rounded-lg border border-zinc-200 bg-white p-4 shadow-sm dark:border-zinc-700 dark:bg-zinc-800 animate-hide">
+    <h2 class="text-xl font-bold text-zinc-950 dark:text-white mb-4">
+      <%= @target.name %>  
+    </h2>
+  </div>
 <% end %>
