--- a/app/views/targets/update.turbo_stream.erb
+++ b/app/views/targets/update.turbo_stream.erb
@@ -1,5 +1,3 @@
-<%= turbo_stream.replace @target do %>
-  <%= turbo_frame_tag dom_id(@target) do %>
-    <%= render 'link', target: @target, link_class: 'transition-colors ease-in duration-700 animate-flash-yellow' %>
-  <% end %>
+<%= turbo_stream.update dom_id(@target, :link) do %>
+  <%= render 'link', target: @target, link_class: 'animate-flash-yellow' %>
 <% end %>
