--- a/app/views/data_models/_other_workspace_badge.html.erb
+++ b/app/views/data_models/_other_workspace_badge.html.erb
@@ -1,4 +1,4 @@
-<% if data_model.workspace != current_workspace && data_model.system_model == false %>
+<% if data_model.workspace != current_workspace && data_model.public_model == false %>
   <div class="inline-flex rounded-lg items-center justify-center bg-blue-200" title="">
     <p class="py-1 px-2 text-xs whitespace-nowrap"><%= data_model.workspace.name %></p>
   </div>
