--- a/app/views/data_models/show.html.erb
+++ b/app/views/data_models/show.html.erb
@@ -49,7 +49,7 @@
 
   <div class="mt-4 flex flex-wrap items-end justify-start gap-4">
     <% @data_model.focus_area_groups.each do |focus_area_group| %>
-      <div class="mb-6">
+      <div class="mb-6 w-full">
         <h2 class="text-2xl font-bold text-zinc-950 dark:text-white mb-4" title="<%= focus_area_group.name %>">
           <%- if focus_area_group.color.present? %>
             <span class="w-2 mr-1" style="background-color: <%= focus_area_group.color %>">&nbsp;</span>
